Fix extension loading causing whole plugin to error